# DirectXShaderCompilerBinary

./: CMakeLists.txt  README.md
include/dxc/Support/: WinIncludes.h
src/: d3dcomp.cpp
